// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardBalance renders correctly 1`] = `
@supports (grid-gap:0) {
  .emotion-3 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .emotion-3 > * + * {
    margin-top: 0;
  }

  .emotion-3 > style:first-child + * {
    margin-top: 0;
  }
}

.emotion-0 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

<div
  className="emotion-3 emotion-4"
>
  <p
    className="emotion-0"
  >
    Bitcoin
  </p>
  <p
    className="emotion-2"
  >
    1526.56 
    <abbr
      className="emotion-1"
      title="Millibitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;

exports[`CardBalance renders correctly with a badge 1`] = `
@supports (grid-gap:0) {
  .emotion-5 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .emotion-5 > * + * {
    margin-top: 0;
  }

  .emotion-5 > style:first-child + * {
    margin-top: 0;
  }
}

.emotion-2 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.emotion-3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

.emotion-1 {
  margin-bottom: 1rem;
}

.emotion-0 {
  color: #FFF;
  background-color: #0CD664;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
}

<div
  className="emotion-5 emotion-6"
>
  <p
    className="emotion-1"
  >
    <span
      className="emotion-0"
    >
      Active
    </span>
  </p>
  <p
    className="emotion-2"
  >
    Bitcoin
  </p>
  <p
    className="emotion-4"
  >
    1526.56 
    <abbr
      className="emotion-3"
      title="Millibitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;

exports[`CardBalance renders with currency if no unitTitle provided 1`] = `
@supports (grid-gap:0) {
  .emotion-3 {
    display: grid;
    grid-gap: 0;
  }
}

@supports not (grid-gap:0) {
  .emotion-3 > * + * {
    margin-top: 0;
  }

  .emotion-3 > style:first-child + * {
    margin-top: 0;
  }
}

.emotion-0 {
  margin-top: 0;
  color: #8697A2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

<div
  className="emotion-3 emotion-4"
>
  <p
    className="emotion-0"
  >
    Bitcoin
  </p>
  <p
    className="emotion-2"
  >
    1526.56 
    <abbr
      className="emotion-1"
      title="Bitcoin"
    >
      mBTC
    </abbr>
  </p>
</div>
`;
